[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/cavestuff/GreenFriend/green_friend_long_arm.png" type="Texture" id=1]
[ext_resource path="res://sprites/cavestuff/GreenFriend/green_friend_long_ear.png" type="Texture" id=2]
[ext_resource path="res://hitnhurtboxes/SeenBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/0.0 Cave/SecretListener.gd" type="Script" id=4]
[ext_resource path="res://sprites/items/one_g.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=2]
radius = 57.2715

[sub_resource type="CircleShape2D" id=1]
radius = 50.9829

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("green_friend_long_arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 935.725, 2112.86 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("green_friend_long_ear:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 962.574, 1333.25 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "lower_arm"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("green_friend_long_arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 935.725, 1358.25 ), Vector2( 935.725, 2112.86 ), Vector2( 935.725, 4256.08 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("green_friend_long_ear:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 962.574, 2117.86 ), Vector2( 962.574, 4261.09 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "lower_ear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("green_friend_long_arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 935.725, 2112.86 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("green_friend_long_ear:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 962.574, 1333.25 ), Vector2( 962.574, 2117.86 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "raise_arm"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "raise_arm"
tracks/0/type = "value"
tracks/0/path = NodePath("green_friend_long_arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 935.725, 2112.86 ), Vector2( 935.725, 1358.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("green_friend_long_ear:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 962.574, 2117.86 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "arm_up"
} ]
}

[node name="SecretListener" type="Node2D"]
script = ExtResource( 4 )

[node name="green_friend_long_ear" type="Sprite" parent="."]
position = Vector2( 962.574, 1333.25 )
texture = ExtResource( 2 )

[node name="ListenSeenBox" parent="green_friend_long_ear" instance=ExtResource( 3 )]
position = Vector2( -14.0149, -963.08 )

[node name="CollisionShape2D" parent="green_friend_long_ear/ListenSeenBox" index="0"]
position = Vector2( 8.20166, 4.10083 )
shape = SubResource( 2 )

[node name="green_friend_long_arm" type="Sprite" parent="."]
position = Vector2( 935.725, 2112.86 )
texture = ExtResource( 1 )

[node name="PrizeSeenBox" parent="green_friend_long_arm" instance=ExtResource( 3 )]
position = Vector2( -4.99957, -981.956 )

[node name="CollisionShape2D" parent="green_friend_long_arm/PrizeSeenBox" index="0"]
position = Vector2( -1.7403, -3.48047 )
shape = SubResource( 1 )
disabled = true

[node name="OneG" type="Sprite" parent="green_friend_long_arm"]
position = Vector2( 7.09137, 1.09644 )

[node name="one_g" type="Sprite" parent="green_friend_long_arm/OneG"]
position = Vector2( -10.1398, -984.26 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 3 )
anims/lower_arm = SubResource( 6 )
anims/lower_ear = SubResource( 4 )
anims/raise_arm = SubResource( 5 )
[connection signal="seen" from="green_friend_long_ear/ListenSeenBox" to="." method="_on_ListenSeenBox_seen"]
[connection signal="seen" from="green_friend_long_arm/PrizeSeenBox" to="." method="_on_PrizeSeenBox_seen"]

[editable path="green_friend_long_ear/ListenSeenBox"]

[editable path="green_friend_long_arm/PrizeSeenBox"]
